# kathai-chithiram

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  blender_animation.py  generate_animation.py  project-status.yaml  pyproject.toml
TICKETS/: KC-1-verifiable-hard-delete.md  KC-10-envelope-per-story-keys.md  KC-11-operator-access-control.md  KC-2-identifier-minimization.md  KC-3-scene-script-validation.md  KC-4-render-safety-guards.md  KC-5-encryption-at-rest.md  KC-6-zdr-no-training-provider-key.md  KC-7-delivery-review-workflow.md  KC-8-parent-facing-privacy-notice.md  KC-9-dpia.md  M1-progress-engine.md
docs/: ADR_001_child_perspective_safeguarding.md  ADR_002_progress_quantification_premise_suggestion.md  ADR_003_progress_engine_design.md  ADR_004_operator_access_control.md  ADR_005_multi_user_program_platform.md  BACKLOG.md  BRAND.md  CONTENT_SAFETY.md  DPIA.md  DPIA_ADDENDUM_accounts_and_dob.md  DPO_REVIEW_PACKAGE.md  M1_COLLABORATOR_OUTREACH.md  M1_OUTREACH_SEND_READY.md  M1_PROFESSIONAL_COLLABORATOR_BRIEF.md  M1_WALKTHROUGH.md  PARENT_PRIVACY_NOTICE.md  PROGRESS_POLICY.md  R10_DEPLOYMENT_BOUNDARY.md  RETENTION_ERASURE_DESIGN.md  SCENE_SCRIPT_CONTRACT.md  STATE_OF_PLAY.md  STORY_TEMPLATE.md  shared-services.md
docs/examples/: bedtime_routine.json  brushing_teeth.json  going_to_the_park.json  progress_policy.sample.json  progress_policy.template.json
docs/superpowers/plans/: 2026-07-07-per-child-key-tree.md  2026-07-07-per-family-key-layer.md  2026-07-07-registry-at-rest-encryption.md  2026-07-07-test-persona-harness.md
docs/superpowers/specs/: 2026-07-07-per-child-key-tree-content-cascade-design.md  2026-07-07-per-family-key-layer-design.md  2026-07-07-registry-at-rest-encryption-design.md  2026-07-07-test-persona-harness-design.md
src/kathai_chithiram/: __init__.py  cli.py  errors.py
src/kathai_chithiram/access/: __init__.py  audit.py  guarded_store.py  identity.py  policy.py  principal.py
src/kathai_chithiram/authoring/: __init__.py  template.py
src/kathai_chithiram/feedback/: __init__.py  capture.py  schema.py
src/kathai_chithiram/generation/: __init__.py  generator.py  offline.py  scene_builder.py  scene_script_prompt.py  system_prompt.py
src/kathai_chithiram/intake/: __init__.py  privacy_notice.py  service.py  submission.py
src/kathai_chithiram/people/: __init__.py  erasure.py  grants.py  models.py  registry.py
src/kathai_chithiram/privacy/: __init__.py  pseudonymize.py
src/kathai_chithiram/progress/: __init__.py  config.py  engine.py  evidence.py  policy.py  review.py  run.py  suggestion.py
src/kathai_chithiram/rendering/: __init__.py  audio_mux.py  captions.py  narration.py  pipeline.py  safety.py  scene_art_hints.py  sfx.py  silas_story.py  sounds.py  transitions.py  voices.py  wav_io.py
src/kathai_chithiram/review/: __init__.py  schema.py  service.py
src/kathai_chithiram/scene_script/: __init__.py  schema.py  validation.py
src/kathai_chithiram/storage/: __init__.py  crypto.py  deletion.py  protocol.py  retention.py  store.py
src/kathai_chithiram/video/: __init__.py  adapter.py  brief.py  generate.py
src/kathai_chithiram/wegofwd_llm/: __init__.py  anthropic_provider.py  gateway.py  provider.py
tests/kathai_chithiram/: test_cli.py
tests/kathai_chithiram/access/: test_access_audit.py  test_access_identity.py  test_access_policy.py  test_guarded_store.py
tests/kathai_chithiram/authoring/: test_template.py
tests/kathai_chithiram/feedback/: test_capture.py  test_schema.py
tests/kathai_chithiram/generation/: test_generator.py  test_offline.py  test_scene_builder.py  test_scene_script_prompt.py  test_system_prompt.py
tests/kathai_chithiram/intake/: test_privacy_notice.py  test_service.py  test_submission.py
tests/kathai_chithiram/people/: mock_personas.py  personas.local.example.json  test_erasure.py  test_erasure_crypto_shred.py  test_erasure_family_shred.py  test_grants.py  test_mock_personas.py  test_models.py  test_programs.py  test_registry.py  test_registry_encryption.py
tests/kathai_chithiram/privacy/: test_pseudonymize.py
tests/kathai_chithiram/progress/: test_progress_access.py  test_progress_config.py  test_progress_engine.py  test_progress_evidence.py  test_progress_policy.py  test_progress_review.py  test_progress_run.py  test_progress_suggestion.py
tests/kathai_chithiram/rendering/: fake_renderer.py  test_blender_renderer.py  test_captions.py  test_conformance.py  test_narration.py  test_pipeline.py  test_render_audio.py  test_render_transitions.py  test_safety.py  test_scene_art.py  test_scene_art_hints.py  test_sfx.py  test_sounds.py  test_transitions.py  test_voices.py
tests/kathai_chithiram/review/: test_review_schema.py  test_review_service.py
tests/kathai_chithiram/scene_script/: mock_scripts.py  test_validation.py
tests/kathai_chithiram/storage/: test_crypto.py  test_deletion.py  test_retention.py  test_store.py  test_store_child_key_tree.py  test_store_encryption.py  test_store_envelope.py  test_store_family_key_layer.py
tests/kathai_chithiram/video/: test_video.py
tests/kathai_chithiram/wegofwd_llm/: mock_story.py  test_anthropic_provider.py  test_gateway.py
