[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kathai-chithiram"
version = "0.1.0"
description = "Turns a parent's written story into a short, calm, captioned animation for a child with special needs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "jsonschema>=4.0",
    # Shared video-generation seam (ADR-026): kathai drives the deterministic
    # renderer through wegofwd-video's registry + provenance. Library, not a
    # service — runs in-process so child content never leaves the process. The
    # core seam has zero runtime deps (the AI 'veo' extra is intentionally unused).
    "wegofwd-video @ git+https://github.com/wegofwd2020-hub/wegofwd-video@v0.1.2",
]

[project.scripts]
# The end-to-end pipeline CLI. Rendering needs the [render] extra; live
# generation needs the [generation] extra and ANTHROPIC_API_KEY.
kc = "kathai_chithiram.cli:main"

[project.optional-dependencies]
# Runtime deps for the matplotlib reference renderer (generate_animation.py).
# Kept optional because the contract/validation/storage layers don't need them;
# the Blender renderer's 'bpy' is intentionally absent — it isn't pip-installable
# and is loaded lazily only when running inside Blender.
render = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pillow>=9.0",
    "imageio>=2.27",
    "imageio-ffmpeg>=0.4",
]
# The concrete AnthropicProvider behind the wegofwd-llm seam. Kept optional so
# the contract/validation/storage layers (and provider-agnostic seam) don't pull
# in an SDK; install only when running real generation.
generation = [
    "anthropic>=0.69",
]
# At-rest encryption of stored artifacts (KC-5). Kept optional so the core
# contract/validation layers stay dependency-light; install it (and set
# KC_STORAGE_KEY) for any deployment that persists real story data.
encryption = [
    "cryptography>=42",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-jsonschema>=4.0",
    # The conformance suite imports the matplotlib renderer, so dev needs render.
    "kathai-chithiram[render]",
    # The storage-encryption tests need the cipher backend.
    "kathai-chithiram[encryption]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." lets the conformance suite import the root-level reference renderers
# (generate_animation.py / blender_animation.py).
pythonpath = ["src", "."]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear, UP: pyupgrade,
# BLE: flake8-blind-except (enforces "no bare/blind except" from CLAUDE.md).
select = ["E", "F", "I", "B", "UP", "BLE"]

[tool.mypy]
python_version = "3.10"
packages = ["kathai_chithiram"]
mypy_path = "src"
strict = true
warn_unused_ignores = true

# jsonschema ships no inline types; types-jsonschema (a dev dep) supplies stubs.
# Fall back to ignoring its imports when the stub package is absent so a strict
# check never fails purely on a missing third-party stub.
[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

# The anthropic SDK is an optional ([generation]) dependency and ships no stubs
# we rely on; the AnthropicProvider treats the client structurally. Ignore its
# import so a strict check never fails purely because the extra isn't installed.
[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true

# The reference renderers live at the repo root (not in the package) and are
# imported lazily by the CLI. Skip following into them so the matplotlib PoC is
# not type-checked here (it predates strict typing); treat them as Any.
[[tool.mypy.overrides]]
module = ["generate_animation", "blender_animation"]
ignore_missing_imports = true
follow_imports = "skip"
